Added infinite scrolling functionality to the main functionality. It will scroll when you reach the bottom.

--- a/client/invoices.html
+++ b/client/invoices.html
@@ -22,5 +22,9 @@
         {{/each}}
         </tbody>
     </table>
-    <div id="scrollForMore">Loading more...</div>
+    {{#if moreResults}}
+        <div id="showMoreResults" style="margin-left: 25px;">
+            <span class="loading">Loading...</span>
+        </div>
+    {{/if}}
 </template>
